8307147: [x86] Dangling pointer warning for Assembler::_attributes

Reviewed-by: phh
Backport-of: 3599448ad833553dd502a4f941dad7295b557d55